# dxlib

./: Cargo.toml  README.md
etc/: DxLib_x64.def  DxLib_x64_R.def
resource/: shader_PS.hlsl  shader_PS.pso  shader_VS.hlsl
src/: demo.rs  dx.rs  ext.rs  lib.rs
src/demo/: dum.rs  typ.rs
src/ext/: font.rs  graph.rs  light.rs  music.rs  shader.rs  sound.rs  tdx.rs
